fix align property

--- a/src/scss/components/_about-us.scss
+++ b/src/scss/components/_about-us.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
